fixed overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ button {
 .tophalf-wrapper {
     overflow: hidden;
     /* border: 1px black solid; */
-    min-height: 140vh;
+    height: 140vh;
 }
 
 .bottomhalf-wrapper {
@@ -142,7 +142,7 @@ button {
     grid-template-columns: 2fr 3fr;
     width: 90vw;
     margin: auto;
-    min-height: 80vh;
+    height: 80vh;
 }
 
 /* LEFT SIDE - Artists */
@@ -166,6 +166,7 @@ button {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     border: 1px #1ED760 solid;
+    max-height: 42px;
 }
 
 .artist-card-text {
@@ -321,6 +322,15 @@ button {
 }
 
 /* MEDIA QUERIES */
+
+/* @media screen and (max-width: 768px) {
+    .top-logo {
+        flex: 1
+    }
+    .login-area>form>div {
+        grid-column: 1;
+    }
+} */
 
 @media screen and (max-width: 950px) {
     header {
